--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -23,6 +23,8 @@ afr_module_sources(
         "${AFR_DEMOS_DIR}/include/iot_config_common.h"
         "${AFR_DEMOS_DIR}/include/iot_demo_logging.h"
         "${AFR_DEMOS_DIR}/include/iot_demo_runner.h"
+        "${AFR_DEMOS_DIR}/ota/sensors_task.c"
+
 )
 afr_module_include_dirs(
     ${AFR_CURRENT_MODULE}
